--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "weazr-front",
-  "version": "0.0.0",
+  "version": "0.1.0",
+  "license": "CESI",
   "scripts": {
     "dev": "vite",
     "build": "vue-tsc --noEmit && vite build",
@@ -11,10 +12,15 @@
     "@fortawesome/fontawesome-svg-core": "^1.2.36",
     "@fortawesome/free-solid-svg-icons": "^5.15.4",
     "@fortawesome/vue-fontawesome": "^3.0.0-5",
+    "@kurkle/color": "^0.1.9",
+    "@types/luxon": "^2.0.9",
     "animate.css": "^4.1.1",
-    "echarts": "^5.2.2",
+    "chart.js": "^3.7.0",
+    "chartjs-adapter-luxon": "^1.1.0",
+    "luxon": "^2.3.0",
+    "patternomaly": "^1.3.2",
     "vue": "^3.2.25",
-    "vue-echarts": "^6.0.2",
+    "vue-chart-3": "^3.0.7",
     "vue-router": "4"
   },
   "devDependencies": {
