--- a/package.json
+++ b/package.json
@@ -13,11 +13,18 @@
     "@fortawesome/free-solid-svg-icons": "^5.15.4",
     "@fortawesome/vue-fontawesome": "^3.0.0-5",
     "@kurkle/color": "^0.1.9",
+    "@types/cron": "^1.7.3",
+    "@types/express": "^4.17.13",
     "@types/luxon": "^2.0.9",
+    "@types/mysql": "^2.15.21",
     "animate.css": "^4.1.1",
     "chart.js": "^3.7.0",
     "chartjs-adapter-luxon": "^1.1.0",
+    "cron": "^1.8.2",
+    "express": "^4.17.2",
     "luxon": "^2.3.0",
+    "mysql": "^2.18.1",
+    "mysql2": "^2.3.3",
     "patternomaly": "^1.3.2",
     "vue": "^3.2.25",
     "vue-chart-3": "^3.0.7",
