--- a/package.json
+++ b/package.json
@@ -13,17 +13,23 @@
     "@fortawesome/free-solid-svg-icons": "^5.15.4",
     "@fortawesome/vue-fontawesome": "^3.0.0-5",
     "@kurkle/color": "^0.1.9",
+    "@types/axios": "^0.14.0",
+    "@types/body-parser": "^1.19.2",
     "@types/cron": "^1.7.3",
+    "@types/dotenv": "^8.2.0",
     "@types/express": "^4.17.13",
     "@types/luxon": "^2.0.9",
     "@types/mysql": "^2.15.21",
+    "@types/node": "^17.0.17",
     "animate.css": "^4.1.1",
+    "axios": "^0.26.0",
+    "body-parser": "^1.19.1",
     "chart.js": "^3.7.0",
     "chartjs-adapter-luxon": "^1.1.0",
     "cron": "^1.8.2",
+    "dotenv": "^16.0.0",
     "express": "^4.17.2",
     "luxon": "^2.3.0",
-    "mysql": "^2.18.1",
     "mysql2": "^2.3.3",
     "patternomaly": "^1.3.2",
     "vue": "^3.2.25",
