--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@types/luxon": "^2.0.9",
     "@types/mysql": "^2.15.21",
     "@types/node": "^17.0.17",
+    "@types/node-cron": "^3.0.1",
     "animate.css": "^4.1.1",
     "axios": "^0.26.0",
     "body-parser": "^1.19.1",
@@ -31,10 +32,12 @@
     "express": "^4.17.2",
     "luxon": "^2.3.0",
     "mysql2": "^2.3.3",
+    "node-cron": "^3.0.0",
     "patternomaly": "^1.3.2",
     "vue": "^3.2.25",
     "vue-chart-3": "^3.0.7",
-    "vue-router": "4"
+    "vue-router": "4",
+    "vuex": "^4.0.2"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^2.0.0",
